冬休みの宿題

--- a/homework1/index.html
+++ b/homework1/index.html
@@ -9,12 +9,7 @@
 	<link rel="stylesheet" href="./css/custom.css">
 </head>
 <body>
-	<h1>冬休みの宿題</h1>
-    <ol>
-        <li><a href="homework1/index.html">geolocationを使ってみた</a></li>
-        <li><a href="homework2/index.html">for...in文を使ってみた</a></li>
-        <li><a href="homework3/index.html">function returnを使ってみた</a></li>
-    </ol>
+	<button onclick="test()">位置情報を取得</button>
 	<!-- JavaScript -->
 	<script src="//cdn.jsdelivr.net/npm/axios@0.21.1/dist/axios.min.js"></script>
 	<script src="//code.jquery.com/jquery-3.6.1.min.js"></script>
