--- a/homework2/index.html
+++ b/homework2/index.html
@@ -5,16 +5,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="shortcut icon" href="./images/favicon.ico">
 	<title>Research</title>
-	<!-- CSS -->
-	<link rel="stylesheet" href="./css/custom.css">
 </head>
 <body>
-	<h1>冬休みの宿題</h1>
-    <ol>
-        <li><a href="homework1/index.html">geolocationを使ってみた</a></li>
-        <li><a href="homework2/index.html">for...in文を使ってみた</a></li>
-        <li><a href="homework3/index.html">function returnを使ってみた</a></li>
-    </ol>
+	<p>コンソール画面を見てください</p>
 	<!-- JavaScript -->
 	<script src="//cdn.jsdelivr.net/npm/axios@0.21.1/dist/axios.min.js"></script>
 	<script src="//code.jquery.com/jquery-3.6.1.min.js"></script>
