--- a/index.html
+++ b/index.html
@@ -1,78 +1,82 @@
 <!DOCTYPE html>
 <html lang="ja">
-    <head>
-        <meta charset="UTF-8">
-        <title>増田大翔のポートフォリオサイト(ポートフォリオ)</title>
-        <link rel="stylesheet" href="style.css">
-        <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
-    </head>
-    <body>
-        <div id="container">
-            <header class="portfolio">
-                <h1 id="title_portfolio">HIROTO's SITE</h1>
-            </header>
-            <h1 id="comment">僕のポートフォリオサイトへようこそ！！</h1>
-            <hr>
-            <div>
-                <h1 id="workTitle1">・・・鉄道関連作品・・・</h1>
-                <div class="work1">
-                    <a href="portfolio_railroad1/index.html" target="_blank" class="work1-1">
-                        <dl>
-                            <dt><img src="images/東海道・山陽・九州新幹線停車駅ご案内.png" width="300px" height="200px"></dt>
-                            <dd>東海道・山陽・九州新幹線停車駅ご案内</dd>
-                        </dl>     
-                    </a>
-                    <a href="portfolio_railroad2/index.html" target="_blank" class="work1-2">
-                        <dl>
-                            <dt><img src="images/北陸新幹線停車駅ご案内.png" width="300px" height="200px"></dt>
-                            <dd>北陸新幹線停車駅ご案内</dd>
-                        </dl>     
-                    </a>
-                    <a href="portfolio_railroad3/index.html" target="_blank" class="work1-3">
-                        <dl>
-                            <dt><img src="images/九州新幹線クイズ.png" width="300px" height="200px"></dt>
-                            <dd>九州新幹線クイズ</dd>
-                        </dl>     
-                    </a>
-                </div>
-                <h2>各作品ソースコード公開</h2>
-                <ul>
-                    <li><a href="https://gist.github.com/hiroppe/68bbfa5f593dbdcdf6f8c21f76cd7995" target="_blank">東海道・山陽・九州新幹線停車駅ご案内</a></li>
-                    <li><a href="https://gist.github.com/hiroppe/b4f58c3fccbb8b78d68a816398229d67" target="_blank">北陸新幹線停車駅ご案内</a></li>
-                    <li><a href="https://gist.github.com/hiroppe/05f394a1241f7ab326e3e48bd7cb7768" target="_blank">九州新幹線クイズ</a></li>
-                </ul>
-            </div>
-            <div>
-                <h1 id="workTitle2">・・・Webアプリ関連作品・・・</h1>
-                <div class="work2">
-                    <a href="portfolio_app1/index.html" target="_blank" class="work2-1">
-                        <dl>
-                            <dt><img src="images/割り勘アプリ.png" width="300px" height="200px"></dt>
-                            <dd>割り勘アプリ</dd>
-                        </dl>     
-                    </a>
-                    <a href="portfolio_app2/index.html" target="_blank" class="work2-2">
-                        <dl>
-                            <dt><img src="images/天気アプリ.png" width="300px" height="200px"></dt>
-                            <dd>天気アプリ</dd>
-                        </dl>     
-                    </a>
-                    <a href="portfolio_app3/index.html" target="_blank" class="work2-3">
-                        <dl>
-                            <dt><img src="images/時報付き時計.png" width="300px" height="200px"></dt>
-                            <dd>時報付き時計</dd>
-                        </dl>     
-                    </a>
-                </div>
-                <h2>各作品ソースコード公開</h2>
-                <ul>
-                    <li><a href="https://gist.github.com/hiroppe/78a3ceb3ca16522c17c7c09126401ab1" target="_blank">割り勘アプリ</a></li>
-                    <li><a href="https://gist.github.com/hiroppe/93267a8f6a7bc23d416e5fe50b2d2242" target="_blank">天気アプリ</a></li>
-                    <li><a href="https://gist.github.com/hiroppe/ca95331f85ea4dc212917d7cc57cf9f1" target="_blank">時報付き時計</a></li>
-                </ul>
-            </div>
-        </div>
-        <script src="//code.jquery.com/jquery-3.6.1.min.js"></script>
-	    <script src="scroll.js"></script>
-    </body>
+<head>
+	<meta charset="UTF-8"/>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="shortcut icon" href="./images/favicon.ico">
+	<title>PiyoStarter</title>
+	<!-- CSS -->
+	<link rel="stylesheet" href="./libs/bootstrap/bootstrap.min.css">
+	<link rel="stylesheet" href="./libs/bootstrap/carousel.css">
+	<link rel="stylesheet" href="//cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css">
+	<link rel="stylesheet" href="./css/custom.css">
+</head>
+<body>
+	
+	<!-- Header(Start) -->
+	<header>
+		<nav class="navbar navbar-expand-md navbar-dark bg-dark">
+			<div class="container-fluid">
+				<a class="navbar-brand" href="#">
+					<img src="./images/logo.png">PiyoStarter
+				</a>
+			</div>
+		</nav>
+	</header>
+	<!-- Header(End) -->
+
+	<!-- Main(Start) -->
+	<main>
+		<div class="container mt-5 pb-5">
+			<h1>Bootstrapをはじめよう!!</h1>
+			<p>世界で一番人気のあるフロントエンドライブラリBootstrapで、モバイルファーストなレスポンシブウェブを素早くデザイン・カスタマイズできます。レスポンシブグリッドシステム、豊富なコンポーネント、強力なJavaScriptプラグインを備えています。</p>
+			<button type="button" class="btn btn-primary">公式サイト</button>
+		</div>
+		<div class="container mt-3 border"></div>
+		<div class="container mt-5">
+			<div class="row">
+				<div class="col">
+					<h1>Layout</h1>
+					<p>Bootstrapには強力なレイアウトシステムが存在します。先ずはコンテナとグリッドシステムについて理解しましょう。</p>
+					<ul>
+						<li><a href="#">Containers</a></li>
+						<li>Grid(Comming soon!!)</li>
+					</ul>
+				</div>
+				<div class="col">
+					<h1>Components</h1>
+					<p>Bootstrapには様々なコンポーネントが備わっています。必要に応じて使いこなしましょう。</p>
+					<ul>
+						<li><a href="#">Button guide</a></li>
+						<li><a href="#">Alerts guide</a></li>
+						<li><a href="#">Card guide</a></li>
+						<li><a href="#">Collapse guide</a></li>
+						<li><a href="#">Accordion guide</a></li>
+						<li>etc...(Comming soon!!)</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</main>
+	<!-- Main(End) -->
+
+	<!-- Footer(Start) -->
+	<footer>
+		<div class="container text-muted py-5 border-0">
+			<p class="float-end mb-1"><a href="#">Back to top</a></p>
+			<p class="mb-1">&copy; Bootstrap</p>
+			<p class="mb-0">
+				<a href="https://getbootstrap.jp" target="_blank">Bootstap公式サイト</a>や
+				<a href="https://getbootstrap.jp/docs/5.0/getting-started/introduction/" target="_blank">スタートガイド</a>、
+				<a href="https://icons.getbootstrap.com/" target="_blank">アイコン</a>を活用しましょう。
+			</p>
+		</div>
+	</footer>
+	<!-- Footer(End) -->
+
+	<!-- JavaScript -->
+	<script src="./libs/jquery/jquery-3.6.1.min.js"></script>
+	<script src="./libs/bootstrap/bootstrap.min.js"></script>
+	<script src="./main.js"></script>
+</body>
 </html>
