--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="shortcut icon" href="./images/favicon.ico">
-	<title>PiyoAlbum</title>
+	<title>PiyoForm</title>
 	<!-- CSS -->
 	<link rel="stylesheet" href="./libs/bootstrap/bootstrap.min.css">
 	<link rel="stylesheet" href="./libs/bootstrap/carousel.css">
@@ -18,7 +18,7 @@
 		<nav class="navbar navbar-expand-md navbar-dark bg-dark">
 			<div class="container-fluid">
 				<a class="navbar-brand" href="#">
-					<img src="./images/logo.png">PiyoAlbum
+					<img src="./images/logo.png">PiyoForm
 				</a>
 			</div>
 		</nav>
@@ -27,86 +27,58 @@
 
 	<!-- Main(Start) -->
 	<main>
-		<div class="container m-5 p-5 text-center">
-			<div class="row justify-content-center">
-				<div class="col">
-					<h1>Portfolios</h1>
+		<div class="container mt-5">
+			<h1>FormControl</h1>
+			<form>
+				<div class="mb-3">
+					<label class="form-label" for="email1">Email address</label>
+					<input type="email" class="form-control" id="email1" aria-describedby="emailHelp" placeholder="piyo@piyo.com">
 				</div>
-			</div>
-			<div class="row justify-content-center">
-				<div class="col-5">
-					<p>ポートフォリオサイトは自身が作った作品をまとめたWebサイトのことで、新しいクライアントに対してスキルや実績をアピールすることを目的としています。</p>
+				<div class="mb-3">
+					<label class="form-label" for="textarea1">Example textarea</label>
+					<textarea class="form-control" id="textarea1" rows="3"></textarea>
 				</div>
-			</div>
-			<div class="row justify-content-center">
-				<div class="col">
-					<button type="button" class="btn btn-primary">Main call to action</button>
-        			<button type="button" class="btn btn-secondary">Secondary action</button>
+				<div class="mb-3">
+					<select class="form-select" id="select1">
+						<option>Open this select menu</option>
+					</select>
 				</div>
-			</div>
-			
+				<div class="mb-3">
+					<div class="form-check">
+						<input class="form-check-input" type="checkbox" value="" id="check1">
+						<label class="form-check-label" for="check1">Default checkbox</label>
+					</div>
+					<div class="form-check">
+						<input class="form-check-input" type="checkbox" value="" id="check2">
+						<label class="form-check-label" for="check2">Checked checkbox</label>
+					</div>
+				</div>
+				<div class="mb-3">
+					<div class="form-check">
+						<input class="form-check-input" type="radio" name="radio" value="option1" id="radios1">
+						<label class="form-check-label" for="radios1">Default radio</label>
+					</div>
+					<div class="form-check">
+						<input class="form-check-input" type="radio" name="radio" value="option2" id="radios2">
+						<label class="form-check-label" for="check2">Checked radio</label>
+					</div>
+				</div>
+				<div class="mb-3">
+					<div class="form-check form-switch">
+						<input class="form-check-input" type="checkbox" value="" id="check1">
+						<label class="form-check-label" for="check1">Default switch</label>
+					</div>
+					<div class="form-check form-switch">
+						<input class="form-check-input" type="checkbox" value="" id="check2">
+						<label class="form-check-label" for="check2">Checked switch</label>
+					</div>
+				</div>
+				<div class="mb-3">
+					<button type="button" class="btn btn-primary">Submit</button>
+					<button type="button" class="btn btn-secondary">Reset</button>
+				</div>
+			</form>
 		</div>
-		<div class="container-fluid p-5 bg-light">
-			<div class="row">
-				<div class="col">
-					<div class="card" style="max-width: 27rem;">
-						<img class="card-img-top" src="images/logo_html.png" alt="htmlロゴ">
-						<div class="card-body">
-							<p class="card-text">HyperText Markup Language(ハイパーテキスト マークアップ ランゲージ)は、ハイパーテキストを記述するためのマークアップ言語の1つで、主にWorld Wide Web(WWW)において、ウェブページを表現するために用いられます。</p>
-							<a href="#" class="btn btn-primary">Demo</a>
-						</div>
-					</div>
-				</div>
-				<div class="col">
-					<div class="card" style="max-width: 27rem;">
-						<img class="card-img-top" src="images/logo_css.png" alt="cssロゴ">
-						<div class="card-body">
-							<p class="card-text">CSS(Cascading Style Sheet)は、HTMLやXMLの要素をどのように修飾(表示)するかを指示する仕様の一つで、文書の構造と体裁を分離させるという理念を実現するために提唱されたスタイルシートの具体的な仕様の一つです。</p>
-							<a href="#" class="btn btn-primary">Demo</a>
-						</div>
-					</div>
-				</div>
-				<div class="col">
-					<div class="card" style="max-width: 27rem;">
-						<img class="card-img-top" src="images/logo_javascript.png" alt="jsロゴ">
-						<div class="card-body">
-							<p class="card-text">JavaScriptはプログラミング言語であり、HTMLやCSSと並ぶ、WWWの中核技術の一つである。利用される場面はフロント/バックエンド、アプリなど、ブラウザからサーバ、デスクトップからスマートフォンまで多岐にわたります。</p>
-							<a href="#" class="btn btn-primary">Demo</a>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="row mt-3">
-				<div class="col">
-					<div class="card" style="max-width: 27rem;">
-						<img class="card-img-top" src="images/logo_jquery.png" alt="jqueryロゴ">
-						<div class="card-body">
-							<p class="card-text">jQuery(ジェイクエリー)は、ウェブブラウザ用のJavaScriptコードをより容易に記述できるようにするために設計されたJavascriptライブラリです。ジョン・レシグが、2006年1月に開催された"BarCamp NYC"でリリースしました。</p>
-							<a href="#" class="btn btn-primary">Demo</a>
-						</div>
-					</div>
-				</div>
-				<div class="col">
-					<div class="card" style="max-width: 27rem;">
-						<img class="card-img-top" src="images/logo_bootstrap.png" alt="bootstrapロゴ">
-						<div class="card-body">
-							<p class="card-text">BootstrapはウェブサイトやWebアプリケーションを作成するフロントエンドフレームワークである。タイポグラフィ、ファーム、ボタン、ナビゲーション、その他構成要素や拡張など、HTMLおよびCSSベースのテンプレートとして用意されています。</p>
-							<a href="#" class="btn btn-primary">Demo</a>
-						</div>
-					</div>
-				</div>
-				<div class="col">
-					<div class="card" style="max-width: 27rem;">
-						<img class="card-img-top" src="images/logo_vue.png" alt="vue.jsロゴ">
-						<div class="card-body">
-							<p class="card-text">Vue.jsは、Webアプリケーションにおけるユーザーインターフェイスを構築するための、JavaScriptフレームワークである。他のJavaScriptライブラリを使用するプロジェクトへの導入において、容易になるように設計されています。</p>
-							<a href="#" class="btn btn-primary">Demo</a>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		
 	</main>
 	<!-- Main(End) -->
 
