--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="shortcut icon" href="./images/favicon.ico">
-	<title>PiyoForm</title>
+	<title>PiyoCarousel</title>
 	<!-- CSS -->
 	<link rel="stylesheet" href="./libs/bootstrap/bootstrap.min.css">
 	<link rel="stylesheet" href="./libs/bootstrap/carousel.css">
@@ -15,11 +15,32 @@
 	
 	<!-- Header(Start) -->
 	<header>
-		<nav class="navbar navbar-expand-md navbar-dark bg-dark">
+		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 			<div class="container-fluid">
 				<a class="navbar-brand" href="#">
-					<img src="./images/logo.png">PiyoForm
+					<img src="./images/logo.png">PiyoCarousel
 				</a>
+				<div class="collpse navbar-collapse" id="navbarNav">
+					<ul class="navbar-nav">
+						<li class="nav-item active">
+							<a class="nav-item nav-link active" href="#">Home</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-item nav-link" href="#">Link</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-item nav-link disabled" href="#">Disabled</a>
+						</li>
+					</ul>
+				</div>
+				<form class="row gx-2">
+					<div class="col-auto">
+						<input class="form-control mr-sm-2" type="search" placeholder="Search">
+					</div>
+					<div class="col-auto">
+						<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button> 
+					</div>
+				</form>
 			</div>
 		</nav>
 	</header>
@@ -27,57 +48,114 @@
 
 	<!-- Main(Start) -->
 	<main>
-		<div class="container mt-5">
-			<h1>FormControl</h1>
-			<form>
-				<div class="mb-3">
-					<label class="form-label" for="email1">Email address</label>
-					<input type="email" class="form-control" id="email1" aria-describedby="emailHelp" placeholder="piyo@piyo.com">
-				</div>
-				<div class="mb-3">
-					<label class="form-label" for="textarea1">Example textarea</label>
-					<textarea class="form-control" id="textarea1" rows="3"></textarea>
-				</div>
-				<div class="mb-3">
-					<select class="form-select" id="select1">
-						<option>Open this select menu</option>
-					</select>
-				</div>
-				<div class="mb-3">
-					<div class="form-check">
-						<input class="form-check-input" type="checkbox" value="" id="check1">
-						<label class="form-check-label" for="check1">Default checkbox</label>
-					</div>
-					<div class="form-check">
-						<input class="form-check-input" type="checkbox" value="" id="check2">
-						<label class="form-check-label" for="check2">Checked checkbox</label>
+		<div id="myCarousel" class="carousel slide">
+			<div class="carousel-indicators">
+				<button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+				<button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+				<button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+			</div>
+			<div class="carousel-inner">
+				<div class="carousel-item active">
+					<div id="car-html"></div>
+					<div class="container">
+						<div class="carousel-caption text-start">
+							<h1>Hello, HTML.</h1>
+							<p>HTMLは、主にWorld Wide Webにおいて、ウェブページを表現するために用いられます。</p>
+							<p><a class="btn btn-lg btn-primary" href="#">Sign up today</a></p>
+						</div>
 					</div>
 				</div>
-				<div class="mb-3">
-					<div class="form-check">
-						<input class="form-check-input" type="radio" name="radio" value="option1" id="radios1">
-						<label class="form-check-label" for="radios1">Default radio</label>
-					</div>
-					<div class="form-check">
-						<input class="form-check-input" type="radio" name="radio" value="option2" id="radios2">
-						<label class="form-check-label" for="check2">Checked radio</label>
-					</div>
-				</div>
-				<div class="mb-3">
-					<div class="form-check form-switch">
-						<input class="form-check-input" type="checkbox" value="" id="check1">
-						<label class="form-check-label" for="check1">Default switch</label>
-					</div>
-					<div class="form-check form-switch">
-						<input class="form-check-input" type="checkbox" value="" id="check2">
-						<label class="form-check-label" for="check2">Checked switch</label>
+				<div class="carousel-item">
+					<div id="car-css"></div>
+					<div class="container">
+						<div class="carousel-caption text-start">
+							<h1>Hello, CSS.</h1>
+							<p>CSSは、HTMLやXMLの構造と体裁を分離させるために提唱された仕様の一つです。</p>
+							<p><a class="btn btn-lg btn-primary" href="#">Learn more</a></p>
+						</div>
 					</div>
 				</div>
-				<div class="mb-3">
-					<button type="button" class="btn btn-primary">Submit</button>
-					<button type="button" class="btn btn-secondary">Reset</button>
+				<div class="carousel-item">
+					<div id="car-javascript"></div>
+					<div class="container">
+						<div class="carousel-caption text-start">
+							<h1>Hello, JavaScript.</h1>
+							<p>JavaScriptは、HTMLやCSSと並ぶWWWの中核技術の一つであり、利用される場面はフロント/バックエンドなど多岐にわたります。 </p>
+							<p><a class="btn btn-lg btn-primary" href="#">Browse gallery</a></p>
+						</div>
+					</div>
 				</div>
-			</form>
+			</div>
+			<button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
+				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+				<span class="visually-hidden">Prev</span>
+			</button>
+			<button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
+				<span class="carousel-control-next-icon" aria-hidden="true"></span>
+				<span class="visually-hidden">Next</span>
+			</button>
+		</div>
+		<div class="container pb-5">
+			<div class="row text-center">
+				<div class="col">
+					<div id="head-jquery"></div>
+					<h2>jQuery</h2>
+					<p>jQuery(ジェイクエリー)は、ウェブブラウザ用のJavaScriptコードをより容易に記述できるようにするために設計されたJavaScriptライブラリです。</p>
+					<button class="btn btn-secondary">View details >></button>
+				</div>
+				<div class="col">
+					<div id="head-bootstrap"></div>
+					<h2>Bootstrap</h2>
+					<p>BootstrapはウェブサイトやWebアプリを作成するフレームワークです。タイポグラフィ、フォーム、ボタン、ナビゲーションなどHTMLやCSSベースの
+					   テンプレートが用意されます。</p>
+					<button class="btn btn-secondary">View details >></button>
+				</div>
+				<div class="col">
+					<div id="head-vue"></div>
+					<h2>Vue.js</h2>
+					<p>Vue.jsは、Webアプリケーションにおけるユーザーインターフェイスを構築するためのJavaScriptフレームワークです。</p>
+					<button class="btn btn-secondary">View details >></button>
+				</div>
+			</div>
+		</div>
+		<div class="container border m-5"></div>
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-8 mt-5">
+					<h1>1st step.Hello,HTML!!</h1>
+					<p>Hyper Text Markup Language(ハイパーテキスト マークアップ ランゲージ)は、ハイパーテキストを記述するためのマークアップ言語の1つで、主に
+					   World Wide Web(WWW)において、ウェブページを表現するために用いられます。</p>
+				</div>
+				<div class="col-sm-4">
+					<div id="car-html"></div>
+				</div>
+			</div>
+		</div>
+		<div class="border m-5"></div>
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-4">
+					<div id="car-css"></div>
+				</div>
+				<div class="col-sm-8 mt-5">
+					<h1>2nd step.Hello,CSS!!</h1>
+					<p>CSS(Cascading Style Sheets)は、HTMLやXMLの要素をどのように修飾(表示)するかを指示する仕様の一つで、文書の構造と体裁を分離させるという
+					   理念を実現するために提唱されたスタイルシートの具体的な仕様の一つです。</p>
+				</div>
+			</div>
+		</div>
+		<div class="border m-5"></div>
+		<div class="container mb-5 pb-5">
+			<div class="row">
+				<div class="col-sm-8 mt-5">
+					<h1>3nd step.Hello,JS!!</h1>
+					<p>JavaScriptは、プログラミング言語であり、HTMLやCSSと並ぶ、WWWの中核技術の一つです。利用される場面はフロント/バックエンド、アプリなど、
+					   ブラウザからサーバ、デスクトップからスマートフォンまで多岐にわたります。</p>
+				</div>
+				<div class="col-sm-4">
+					<div id="car-javascript"></div>
+				</div>
+			</div>
 		</div>
 	</main>
 	<!-- Main(End) -->
