--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="shortcut icon" href="./images/favicon.ico">
-	<title>PiyoCarousel</title>
+	<title>Hiroto's Portfolio</title>
 	<!-- CSS -->
 	<link rel="stylesheet" href="./libs/bootstrap/bootstrap.min.css">
 	<link rel="stylesheet" href="./libs/bootstrap/carousel.css">
@@ -18,29 +18,8 @@
 		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 			<div class="container-fluid">
 				<a class="navbar-brand" href="#">
-					<img src="./images/logo.png">PiyoCarousel
+					<img src="./images/logo.png">Hiroto's Portfolio
 				</a>
-				<div class="collpse navbar-collapse" id="navbarNav">
-					<ul class="navbar-nav">
-						<li class="nav-item active">
-							<a class="nav-item nav-link active" href="#">Home</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-item nav-link" href="#">Link</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-item nav-link disabled" href="#">Disabled</a>
-						</li>
-					</ul>
-				</div>
-				<form class="row gx-2">
-					<div class="col-auto">
-						<input class="form-control mr-sm-2" type="search" placeholder="Search">
-					</div>
-					<div class="col-auto">
-						<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button> 
-					</div>
-				</form>
 			</div>
 		</nav>
 	</header>
@@ -48,115 +27,165 @@
 
 	<!-- Main(Start) -->
 	<main>
-		<div id="myCarousel" class="carousel slide">
-			<div class="carousel-indicators">
-				<button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-				<button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
-				<button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
-			</div>
-			<div class="carousel-inner">
-				<div class="carousel-item active">
-					<div id="car-html"></div>
-					<div class="container">
-						<div class="carousel-caption text-start">
-							<h1>Hello, HTML.</h1>
-							<p>HTMLは、主にWorld Wide Webにおいて、ウェブページを表現するために用いられます。</p>
-							<p><a class="btn btn-lg btn-primary" href="#">Sign up today</a></p>
-						</div>
-					</div>
-				</div>
-				<div class="carousel-item">
-					<div id="car-css"></div>
-					<div class="container">
-						<div class="carousel-caption text-start">
-							<h1>Hello, CSS.</h1>
-							<p>CSSは、HTMLやXMLの構造と体裁を分離させるために提唱された仕様の一つです。</p>
-							<p><a class="btn btn-lg btn-primary" href="#">Learn more</a></p>
-						</div>
-					</div>
-				</div>
-				<div class="carousel-item">
-					<div id="car-javascript"></div>
-					<div class="container">
-						<div class="carousel-caption text-start">
-							<h1>Hello, JavaScript.</h1>
-							<p>JavaScriptは、HTMLやCSSと並ぶWWWの中核技術の一つであり、利用される場面はフロント/バックエンドなど多岐にわたります。 </p>
-							<p><a class="btn btn-lg btn-primary" href="#">Browse gallery</a></p>
-						</div>
-					</div>
+		<div class="container m-5 p-5 text-center">
+			<div class="row">
+				<div class="col">
+					<h1>Hiroto's Portfolio</h1>
 				</div>
 			</div>
-			<button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
-				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-				<span class="visually-hidden">Prev</span>
-			</button>
-			<button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
-				<span class="carousel-control-next-icon" aria-hidden="true"></span>
-				<span class="visually-hidden">Next</span>
-			</button>
-		</div>
-		<div class="container pb-5">
-			<div class="row text-center">
+			<div class="row">
 				<div class="col">
-					<div id="head-jquery"></div>
-					<h2>jQuery</h2>
-					<p>jQuery(ジェイクエリー)は、ウェブブラウザ用のJavaScriptコードをより容易に記述できるようにするために設計されたJavaScriptライブラリです。</p>
-					<button class="btn btn-secondary">View details >></button>
-				</div>
-				<div class="col">
-					<div id="head-bootstrap"></div>
-					<h2>Bootstrap</h2>
-					<p>BootstrapはウェブサイトやWebアプリを作成するフレームワークです。タイポグラフィ、フォーム、ボタン、ナビゲーションなどHTMLやCSSベースの
-					   テンプレートが用意されます。</p>
-					<button class="btn btn-secondary">View details >></button>
-				</div>
-				<div class="col">
-					<div id="head-vue"></div>
-					<h2>Vue.js</h2>
-					<p>Vue.jsは、Webアプリケーションにおけるユーザーインターフェイスを構築するためのJavaScriptフレームワークです。</p>
-					<button class="btn btn-secondary">View details >></button>
+					<h2>僕のポートフォリオサイトにようこそ!!</h2>
 				</div>
 			</div>
 		</div>
 		<div class="container border m-5"></div>
 		<div class="container">
+			<div class="row mb-5 text-center">
+				<h1>はじめに</h1>
+				<h4 class="pt-3">
+					この度は当サイトを開いてくださりありがとうございます。<br>
+					私は日本総合ビジネス専門学校 情報メディア学科 情報技術コース２年 増田大翔と申します。
+					当サイトでは私が１年生の時に初めてプログラミング(HTML・CSS・JavaScript)を学び、それを元に活用し作成した作品集です。
+					一生懸命作成した作品ですので是非ご覧ください。現在でも専門学校にて様々な言語を学んでおります。
+					Webプログラマーを目指しておりますので、入社したら精一杯頑張りますのでどうぞよろしくお願いいたします。
+				</h4>
+			</div>
 			<div class="row">
-				<div class="col-sm-8 mt-5">
-					<h1>1st step.Hello,HTML!!</h1>
-					<p>Hyper Text Markup Language(ハイパーテキスト マークアップ ランゲージ)は、ハイパーテキストを記述するためのマークアップ言語の1つで、主に
-					   World Wide Web(WWW)において、ウェブページを表現するために用いられます。</p>
+				<h1 class="text-center">プロフィール</h1>
+				<div class="col mt-3v text-center">
+					<div id="head-logo"></div>
+					<a href="https://gist.github.com/hiroppe" target="_blank" class="btn btn-dark">GitHubアカウントへ</a>
 				</div>
-				<div class="col-sm-4">
-					<div id="car-html"></div>
+				<div class="col-sm-8 mt-3">
+					<ul>
+						<h3><li><spam>名前：</spam>増田大翔</li></h3>
+						<h3><li><spam>出身：</spam>岐阜県揖斐郡池田町</li></h3>
+						<h3><li><spam>趣味：</spam>鉄道好き(特に撮り鉄)</li></h3>
+						<h3><li><spam>資格：</spam>MOS(Word・Excel)、Webクリエイター能力認定試験</li></h3>
+					</ul>
 				</div>
 			</div>
 		</div>
-		<div class="border m-5"></div>
-		<div class="container">
+		<div class="container border m-5"></div>
+		<div class="row text-center">
+			<h1>鉄道関係作品</h1>
+		</div>
+		<div class="container-fluid p-5 bg-warning">
 			<div class="row">
-				<div class="col-sm-4">
-					<div id="car-css"></div>
+				<div class="col">
+					<div class="card" style="max-width: 27rem;">
+						<img class="card-img-top" src="images/東海道・山陽・九州新幹線停車駅ご案内.png">
+						<div class="card-body">
+							<div class="row text-center">
+								<h5>東海道・山陽・九州新幹線停車駅ご案内</h5>
+							</div>
+							<div class="row">
+								<div class="col">
+									<a href="portfolio_railroad1/index.html" target="_blank" class="btn btn-primary">開く(本作品ページへ)</a>
+									<a href="https://gist.github.com/hiroppe/68bbfa5f593dbdcdf6f8c21f76cd7995" target="_blank"
+									 class="btn btn-dark">ソースコード(GitHubへ)</a>
+								</div>
+							</div>
+							
+						</div>
+					</div>
 				</div>
-				<div class="col-sm-8 mt-5">
-					<h1>2nd step.Hello,CSS!!</h1>
-					<p>CSS(Cascading Style Sheets)は、HTMLやXMLの要素をどのように修飾(表示)するかを指示する仕様の一つで、文書の構造と体裁を分離させるという
-					   理念を実現するために提唱されたスタイルシートの具体的な仕様の一つです。</p>
+				<div class="col">
+					<div class="card" style="max-width: 27rem;">
+						<img class="card-img-top" src="images/北陸新幹線停車駅ご案内.png">
+						<div class="card-body">
+							<div class="row text-center">
+								<h5>北陸新幹線停車駅ご案内</h5>
+							</div>
+							<div class="row">
+								<div class="col">
+									<a href="portfolio_railroad2/index.html" target="_blank" class="btn btn-primary">開く(本作品ページへ)</a>
+									<a href="https://gist.github.com/hiroppe/b4f58c3fccbb8b78d68a816398229d67" target="_blank"
+									 class="btn btn-dark">ソースコード(GitHubへ)</a>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col">
+					<div class="card" style="max-width: 27rem;">
+						<img class="card-img-top" src="images/九州新幹線クイズ.png">
+						<div class="card-body">
+							<div class="row text-center">
+								<h5>九州新幹線クイズ</h5>
+							</div>
+							<div class="row">
+								<div class="col">
+									<a href="portfolio_railroad3/index.html" target="_blank" class="btn btn-primary">開く(本作品ページへ)</a>
+									<a href="https://gist.github.com/hiroppe/05f394a1241f7ab326e3e48bd7cb7768" target="_blank"
+									 class="btn btn-dark">ソースコード(GitHubへ)</a>
+								</div>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
+		</div> 
+		<div class="row text-center mt-5 pt-5">
+			<h1>Webアプリケーション関係作品</h1>
 		</div>
-		<div class="border m-5"></div>
-		<div class="container mb-5 pb-5">
+		<div class="container-fluid p-5 bg-success">
 			<div class="row">
-				<div class="col-sm-8 mt-5">
-					<h1>3nd step.Hello,JS!!</h1>
-					<p>JavaScriptは、プログラミング言語であり、HTMLやCSSと並ぶ、WWWの中核技術の一つです。利用される場面はフロント/バックエンド、アプリなど、
-					   ブラウザからサーバ、デスクトップからスマートフォンまで多岐にわたります。</p>
+				<div class="col">
+					<div class="card" style="max-width: 27rem;">
+						<img class="card-img-top" src="images/割り勘アプリ.png">
+						<div class="card-body">
+							<div class="row text-center">
+								<h5>割り勘アプリ</h5>
+							</div>
+							<div class="row">
+								<div class="col">
+									<a href="portfolio_app1/index.html" target="_blank" class="btn btn-primary">開く(本作品ページへ)</a>
+									<a href="https://gist.github.com/hiroppe/78a3ceb3ca16522c17c7c09126401ab1" target="_blank"
+									 class="btn btn-dark">ソースコード(GitHubへ)</a>
+								</div>
+							</div>
+							
+						</div>
+					</div>
 				</div>
-				<div class="col-sm-4">
-					<div id="car-javascript"></div>
+				<div class="col">
+					<div class="card" style="max-width: 27rem;">
+						<img class="card-img-top" src="images/天気アプリ.png">
+						<div class="card-body">
+							<div class="row text-center">
+								<h5>天気アプリ</h5>
+							</div>
+							<div class="row">
+								<div class="col">
+									<a href="portfolio_app2/index.html" target="_blank" class="btn btn-primary">開く(本作品ページへ)</a>
+									<a href="https://gist.github.com/hiroppe/93267a8f6a7bc23d416e5fe50b2d2242" target="_blank"
+									 class="btn btn-dark">ソースコード(GitHubへ)</a>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col">
+					<div class="card" style="max-width: 27rem;">
+						<img class="card-img-top" src="images/時報付き時計.png">
+						<div class="card-body">
+							<div class="row text-center">
+								<h5>時計付き時計</h5>
+							</div>
+							<div class="row">
+								<div class="col">
+									<a href="portfolio_app3/index.html" target="_blank" class="btn btn-primary">開く(本作品ページへ)</a>
+									<a href="https://gist.github.com/hiroppe/ca95331f85ea4dc212917d7cc57cf9f1" target="_blank"
+									 class="btn btn-dark">ソースコード(GitHubへ)</a>
+								</div>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
-		</div>
+		</div> 
 	</main>
 	<!-- Main(End) -->
 
@@ -164,12 +193,6 @@
 	<footer>
 		<div class="container text-muted py-5">
 			<p class="float-end mb-1"><a href="#">Back to top</a></p>
-			<p class="mb-1">&copy; Bootstrap</p>
-			<p class="mb-0">
-				<a href="https://getbootstrap.jp" target="_blank">Bootstap公式サイト</a>や
-				<a href="https://getbootstrap.jp/docs/5.0/getting-started/introduction/" target="_blank">スタートガイド</a>、
-				<a href="https://icons.getbootstrap.com/" target="_blank">アイコン</a>を活用しましょう。
-			</p>
 		</div>
 	</footer>
 	<!-- Footer(End) -->
