--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 			<div class="row">
 				<div class="col">
 					<div class="card" style="max-width: 27rem;">
-						<img class="card-img-top" src="images/割り勘アプリ.png">
+						<img class="card-img-top" src="./images/割り勘アプリ.png">
 						<div class="card-body">
 							<div class="row text-center">
 								<h5>割り勘アプリ</h5>
@@ -152,7 +152,7 @@
 				</div>
 				<div class="col">
 					<div class="card" style="max-width: 27rem;">
-						<img class="card-img-top" src="images/天気アプリ.png">
+						<img class="card-img-top" src="./images/天気アプリ.png">
 						<div class="card-body">
 							<div class="row text-center">
 								<h5>天気アプリ</h5>
@@ -169,7 +169,7 @@
 				</div>
 				<div class="col">
 					<div class="card" style="max-width: 27rem;">
-						<img class="card-img-top" src="images/時報付き時計.png">
+						<img class="card-img-top" src="./images/時報付き時計.png">
 						<div class="card-body">
 							<div class="row text-center">
 								<h5>時計付き時計</h5>
