--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 			<div class="row">
 				<div class="col">
 					<div class="card" style="max-width: 27rem;">
-						<img class="card-img-top" src="images/東海道・山陽・九州新幹線停車駅ご案内.png">
+						<img class="card-img-top" src="images/a.png">
 						<div class="card-body">
 							<div class="row text-center">
 								<h5>東海道・山陽・九州新幹線停車駅ご案内</h5>
@@ -93,7 +93,7 @@
 				</div>
 				<div class="col">
 					<div class="card" style="max-width: 27rem;">
-						<img class="card-img-top" src="images/北陸新幹線停車駅ご案内.png">
+						<img class="card-img-top" src="images/b.png">
 						<div class="card-body">
 							<div class="row text-center">
 								<h5>北陸新幹線停車駅ご案内</h5>
@@ -110,7 +110,7 @@
 				</div>
 				<div class="col">
 					<div class="card" style="max-width: 27rem;">
-						<img class="card-img-top" src="images/九州新幹線クイズ.png">
+						<img class="card-img-top" src="images/c.png">
 						<div class="card-body">
 							<div class="row text-center">
 								<h5>九州新幹線クイズ</h5>
@@ -134,7 +134,7 @@
 			<div class="row">
 				<div class="col">
 					<div class="card" style="max-width: 27rem;">
-						<img class="card-img-top" src="./images/割り勘アプリ.png">
+						<img class="card-img-top" src="./images/d.png">
 						<div class="card-body">
 							<div class="row text-center">
 								<h5>割り勘アプリ</h5>
@@ -152,7 +152,7 @@
 				</div>
 				<div class="col">
 					<div class="card" style="max-width: 27rem;">
-						<img class="card-img-top" src="./images/天気アプリ.png">
+						<img class="card-img-top" src="./images/e.png">
 						<div class="card-body">
 							<div class="row text-center">
 								<h5>天気アプリ</h5>
@@ -169,7 +169,7 @@
 				</div>
 				<div class="col">
 					<div class="card" style="max-width: 27rem;">
-						<img class="card-img-top" src="./images/時報付き時計.png">
+						<img class="card-img-top" src="./images/f.png">
 						<div class="card-body">
 							<div class="row text-center">
 								<h5>時計付き時計</h5>
