--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 			<h1 class="text-center">ようこそ</h1>
 			<nav class="navbar navbar-expand-lg navbar-dark bg-light justify-content-center">
 				<ul class="nav justify-content-center">
-					<li class="nav-item"><a class="btn btn-dark" href="#profile" ><h3>プロフィールへ↓</h3></a></li>
+					<li class="nav-item"><a class="btn btn-dark" href="#profile"><h3>プロフィールへ↓</h3></a></li>
 					<li class="nav-item"><a class="btn btn-warning" href="#railroad"><h3>鉄道作品関連へ↓</h3></a></li>
 					<li class="nav-item"><a class="btn btn-success" href="#webApp"><h3>Webアプリケーション作品関連へ↓</h3></a></li>
 					<li class="nav-item"><a class="btn btn-danger" href="#openProcessing"><h3>OpenProcessing作品へ↓</h3></a></li>
@@ -291,6 +291,42 @@
 										<div id="collapseSix" class="accordion-collapse collapse" aria-labelledby="headingSix" data-bs-parent="#accordion6">
 											<div class="accordion-body">
 												JavaScriptのライブラリであるhowler.jsを学んだので作成しました。
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="row my-3">
+				<div class="col-sm-4">
+					<div class="card" style="max-width: 27rem;">
+						<img class="card-img-top" src="./images/g.png">
+						<div class="card-body">
+							<div class="row text-center">
+								<h5>電卓アプリ</h5>
+							</div>
+							<div class="row">
+								<div class="col">
+									<a href="電卓/index.html" target="_blank" class="btn btn-primary">開く(本作品ページへ)</a>
+									<a href="https://gist.github.com/hiroppe/3a0a8b87637b589b1d68a7e13e90cd7f" target="_blank"
+									 class="btn btn-dark">ソースコード(GitHubへ)</a>
+								</div>
+							</div>
+							<div class="row">
+								<div class="accordion" id="accordion4">
+									<div class="accordion-item">
+										<div class="accordion-header" id="headingFour">
+											<h5 class="mb-0">
+												<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour"
+												 aria-expanded="true" aria-controls="collapseOne">作品の説明</button>
+											</h5>
+										</div>
+										<div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordion4">
+											<div class="accordion-body">
+												デザインをシンプルにしました。プログラムにもこだわって、チャットGPTの力を借りながらコーディングしました。
 											</div>
 										</div>
 									</div>
