--- a/index.html
+++ b/index.html
@@ -191,6 +191,43 @@
 					</div>
 				</div>
 			</div>
+			<div class="row mt-3">
+				<div class="col-sm-4">
+					<div class="card" style="max-width: 27rem;">
+						<img class="card-img-top" src="images/i.png">
+						<div class="card-body">
+							<div class="row text-center">
+								<h5>全国整備新幹線建設促進委員会(架空webサイト)</h5>
+							</div>
+							<div class="row">
+								<div class="col">
+									<a href="鉄道架空サイト/index.html" target="_blank" class="btn btn-primary">開く(本作品ページへ)</a>
+									<a href="https://gist.github.com/hiroppe/906353125457aeccc0b73c45d62e9e40" target="_blank"
+									 class="btn btn-dark">ソースコード(GitHubへ)</a>
+								</div>
+							</div>
+							<div class="row">
+								<div class="accordion" id="accordion3">
+									<div class="accordion-item">
+										<div class="accordion-header" id="headingThree">
+											<h5 class="mb-0">
+												<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree"
+												 aria-expanded="false" aria-controls="collapseThree">作品の説明</button>
+											</h5>
+										</div>
+										<div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordion3">
+											<div class="accordion-body">
+												鉄道シリーズ第４弾として架空webサイトを作成しました。このサイトを作成することによって日本に未だ新幹線が建設されていないことを知って欲しい
+												思いで作成しました。
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div> 
 		<div class="row text-center mt-5 pt-5" id="webApp">
 			<h1>Webアプリケーション関係作品</h1>
