--- a/鉄道写真集/index.html
+++ b/鉄道写真集/index.html
@@ -34,11 +34,14 @@
 				<li><a href="images/4022.jpeg" data-lightbox="gallery1" data-title="W7系 ロゴ"><img src="images/4022.jpeg" alt=""></a></li>
 				<li><a href="images/3966.jpeg" data-lightbox="gallery1" data-title="W7系 行き先表示器"><img src="images/3966.jpeg" alt=""></a></li>
 				<li><a href="images/3975.jpeg" data-lightbox="gallery1" data-title="683系 サンダーバード・ダイナスター・おはよう＆おやすみエクスプレス・能登かがり火・びわこエクスプレス"><img src="images/3975.jpeg" alt=""></a></li>
-				<li><a href="images/3990.jpeg" data-lightbox="gallery1" data-title="サンダーバード 新デザイン"><img src="images/3990.jpeg" alt=""></a></li>
+				<li><a href="images/3990.jpeg" data-lightbox="gallery1" data-title="サンダーバード 新デザインロゴ"><img src="images/3990.jpeg" alt=""></a></li>
 				<li><a href="images/3969.jpeg" data-lightbox="gallery1" data-title="サンダーバード ロゴ＆行き先表示器"><img src="images/3969.jpeg" alt=""></a></li>
 				<li><a href="images/3955.jpeg" data-lightbox="gallery1" data-title="681系 サンダーバード・しらさぎ・ダイナスター・おはよう＆おやすみエクスプレス・能登かがり火"><img src="images/3955.jpeg" alt=""></a></li>
+				<li><a href="images/IMG_0305.jpeg" data-lightbox="gallery1" data-title="681系 サンダーバード旧デザイン車両"><img src="images/IMG_0305.jpeg" alt=""></a></li>
 				<li><a href="images/3957.jpeg" data-lightbox="gallery1" data-title="しらさぎ ロゴ＆行き先表示器"><img src="images/3957.jpeg" alt=""></a></li>
 				<li><a href="images/3959.jpeg" data-lightbox="gallery1" data-title="521系 JR北陸線普通"><img src="images/3959.jpeg" alt=""></a></li>
+				<li><a href="images/IMG_0297.jpeg" data-lightbox="gallery1" data-title="521系 JR七尾線普通"><img src="images/IMG_0297.jpeg" alt=""></a></li>
+				<li><a href="images/IMG_0303.jpeg" data-lightbox="gallery1" data-title="521系 IRいしかわ鉄道普通"><img src="images/IMG_0303.jpeg" alt=""></a></li>
 				<li><a href="images/3961.jpeg" data-lightbox="gallery1" data-title="北陸鉄道03系(元東京メトロ)"><img src="images/3961.jpeg" alt=""></a></li>
 				<li><a href="images/3956.jpeg" data-lightbox="gallery1" data-title="285系 サンライズ出雲・瀬戸"><img src="images/3956.jpeg" alt=""></a></li>
 				<li><a href="images/3951.jpeg" data-lightbox="gallery1" data-title="223系 JR琵琶湖・京都・大阪線新快速"><img src="images/3951.jpeg" alt=""></a></li>
